--- a/1-5/index.html
+++ b/1-5/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
+    <meta charset="utf-8">
     <title>title</title>
+    <meta name="description" content="Describe your website">
+    <style></style>
+    <script></script>
+    <link rel="relationship" href="url">
   </head>
   <body>
     This is My First Project
