--- a/1-5/index.html
+++ b/1-5/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <!--Singl Line Comment-->
     <meta charset="utf-8">
     <title>title</title>
     <meta name="description" content="Describe your website">
@@ -8,6 +9,11 @@
     <link rel="relationship" href="url">
   </head>
   <body>
+    <!--
+      Multipule Line Comments
+      Line One
+      Line Two
+    -->
     This is My First Project
   </body>
 </html>
