--- a/6-10/index.html
+++ b/6-10/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="describtion" content="Describtion...">
+    <meta 
+      name="describtion" 
+      content="Describtion...">
   </head>
   <body>
     <h1>heading 1</h1>
