--- a/6-10/index.html
+++ b/6-10/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="describtion" content="Describtion...">
+    <link rel="stylesheet" href="">
   </head>
   <body>
     <h1>heading 1</h1>
     <p>This is a paragraph</p>
+    <a href=""></a>
+    <img src="" alt="">
+    <audio src=""></audio>
+    <video src=""></video>
   </body>
 </html>
