video 12 Link Anchor Tag

--- a/11-14/index.html
+++ b/11-14/index.html
@@ -33,5 +33,53 @@
    <p>This is a <sub>paragraph</sub></p>
    <p>This is a <sup>paragraph</sup></p>
    
+   <a href="http://google.com" target="_blank" title="Go To Google">Google</a>
+   <a href="http://facebook.com" target="_blank" title="Go To Facebook">Facebook</a>
+   <a href="test.html" title="Go To Test Page">Test Page</a>
+   <a href="#paragrph20" title="Go To Paragraph 20">Paragraph 20</a>
+   <a href="mailto:aiham@gmail.com" title="Contact Me">Contact Me</a>
+
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>   
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaerat maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+    <p id="paragrph20">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis eius, culpa obcaecati magnam, sequi, provident voluptate exercitationem reiciendis quaert maxime! Similique non ullam eveniet debitis consequuntur earum. Ea, dignissimos.</p>
+      
   </body>
 </html>
