--- a/11-14/index.html
+++ b/11-14/index.html
@@ -86,6 +86,43 @@
     <img src="images/image2.jpg" alt="">
     <img src="../image3.jpg" alt="">
     <img src="image4.jpg" alt="moon">
-          
+   
+    <!--
+      ul => Unorder List
+      ol => Order List
+      li => List Item
+      dl => Describtion List
+      dt => Describtion Term
+      dd => Describtion Definition
+    -->
+  
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>
+        JS
+        <ul>
+          <li>Angular</li>
+          <li>Reactjs</li>
+          <li>Vuejs</li>
+        </ul>
+      </li>
+    </ul>
+    <!-- Soperator -->
+    <ol type="1" start="100" reversed>
+      <li value="20">Name</li>
+      <li>Address</li>
+      <li>ID</li>
+    </ol>          
+    <!-- Operator -->
+    <dl>
+      <dt>HTML</dt>
+      <dd>The web language</dd>
+      <dt>CSS</dt>
+      <dd>The style language</dd>
+      <dt>JS</dt>
+      <dd>The programming language</dd>
+    </dl>
+
   </body>
 </html>
