video 16 span & hr & br

--- a/15-18/index.html
+++ b/15-18/index.html
@@ -40,5 +40,8 @@
         </tr>
       </tfoot>
     </table>
+    <p>This is the <span style="color:red">first</span> paragraph</p>
+    <hr>
+    <p>This is <br>the second paragraph</p>
   </body>
 </html>
