video 17 div tag

--- a/15-18/index.html
+++ b/15-18/index.html
@@ -7,6 +7,7 @@
     <meta name="describtion" content="Describtion...">
   </head>
   <body>
+    <!-- Table tag -->
     <table border="1" cellpadding="2px"width="100%">
       <caption>Students'marks</caption>
       <thead>
@@ -40,8 +41,71 @@
         </tr>
       </tfoot>
     </table>
+
+    <!-- span & hr & br tags -->
     <p>This is the <span style="color:red">first</span> paragraph</p>
     <hr>
     <p>This is <br>the second paragraph</p>
+
+    <!-- div tag -->
+    <div style="background-color:yellow; text-align:center">
+      <h2>Heading</h2>
+      <p>This is a paragraph</p>
+    </div>
+
+    <div class="rmantic" style="background-color:blue">
+      <div>
+        <h3>Book Title</h3>
+        <p>Describtion...</p>
+        <span>100$</span>
+      </div>
+      <div>
+        <h3>Book Title</h3>
+        <p>Describtion...</p>
+        <span>100$</span>
+      </div>
+      <div>
+        <h3>Book Title</h3>
+        <p>Describtion...</p>
+        <span>100$</span>
+      </div>
+    </div>
+    <hr>
+    <div class="police" style="background-color:green">
+      <div>
+        <h3>Book Title</h3>
+        <p>Describtion...</p>
+        <span>100$</span>
+      </div>
+      <div>
+        <h3>Book Title</h3>
+        <p>Describtion...</p>
+        <span>100$</span>
+      </div>
+      <div>
+        <h3>Book Title</h3>
+        <p>Describtion...</p>
+        <span>100$</span>
+      </div>
+    </div>
+    <hr>
+    <div class="fantasy" style="background-color:red">
+      <div>
+        <h3>Book Title</h3>
+        <p>Describtion...</p>
+        <span>100$</span>
+      </div>
+      <div>
+        <h3>Book Title</h3>
+        <p>Describtion...</p>
+        <span>100$</span>
+      </div>
+      <div>
+        <h3>Book Title</h3>
+        <p>Describtion...</p>
+        <span>100$</span>
+      </div>
+    </div>
+
   </body>
 </html>
