video 18 HTML Entities

--- a/15-18/index.html
+++ b/15-18/index.html
@@ -106,6 +106,8 @@
         <span>100$</span>
       </div>
     </div>
-
+ 
+    <!-- HTML Entities -->
+    <p>&lt; &gt; &copy;</p>
   </body>
 </html>
