video 19 Semantic Elements

--- a/15-18/index.html
+++ b/15-18/index.html
@@ -109,5 +109,17 @@
  
     <!-- HTML Entities -->
     <p>&lt; &gt; &copy;</p>
+
+    <!-- Semantic Elements -->
+    <header>Header</header>
+    <nav>Link - Link</nav>
+    <section>
+      <section>
+        <article>article</article>
+      </section>
+      <aside>side bar</aside>
+    </section>
+    <footer>footer</footer>
+
   </body>
 </html>
