video 20 Layout with div and classes

--- a/15-18/index.html
+++ b/15-18/index.html
@@ -120,6 +120,37 @@
       <aside>side bar</aside>
     </section>
     <footer>footer</footer>
-
+    
+    <!-- Layout with div and classes -->
+    <div class="header">
+      <h2>Logo</h2>
+      <ul>
+        <li>Home</li>
+        <li>about</li>
+        <li>services</li>
+        <li>contact us</li>
+      </ul>
+    </div>
+    <hr>
+    <div class="nav">
+      <ul>
+        <li>Link</li>
+        <li>Link</li>
+        <li>Link</li>
+        <li>Link</li>
+      </ul>
+    </div>
+    <hr>
+    <div class="content">
+      <img src="" alt="">
+      content
+    </div>
+    <div class="sidebar">
+      sidebar
+    </div>
+    <hr>
+    <div class="footer">
+      footer
+    </div>
   </body>
 </html>
