--- a/15-18/index.html
+++ b/15-18/index.html
@@ -152,5 +152,44 @@
     <div class="footer">
       footer
     </div>
+
+    <br>
+    <br>
+    
+    <!-- Layout with semantic element -->
+    <header>
+      <h2>Logo</h2>
+      <ul>
+        <li>Home</li>
+        <li>about</li>
+        <li>services</li>
+        <li>contact us</li>
+      </ul>
+    </header>
+    <hr>
+    <nav>
+      <ul>
+        <li>Link</li>
+        <li>Link</li>
+        <li>Link</li>
+        <li>Link</li>
+      </ul>
+    </nav>
+    <hr>
+    <section>>
+    <figure>
+      <img src="" alt="">
+      <figcaption>caption...</figcaption>
+    </figure>
+      content
+    <article></article>
+    </section>
+    <aside>
+      sidebar
+    </aside>
+    <hr>
+    <footer>
+      footer
+    </footer>
   </body>
 </html>
