video 23 video tag

--- a/15-18/index.html
+++ b/15-18/index.html
@@ -204,6 +204,15 @@
     
     <br>
     <br>
+
+    <!-- video -->
+    <video controls autoplay muted loop poster="poster.png" width="600" height="400">
+      <source src="media/001 Introduction.mp4" type="video/mp4">
+      <source src="media/001 Introduction.ogg" type="video/ogg">
+      Your browser does not support this video
+      <track src="media/001_Introduction_ar.vtt" kind="subtitles" srclang="ar" label="Arabic">
+      <track src="media/001_Introduction_en.vtt" kind="subtitles" srclang="en" label="English">
+    </video>
     
   </body>
 </html>
