--- a/24-27/index.html
+++ b/24-27/index.html
@@ -7,20 +7,27 @@
     <meta name="description" content="Description...">
   </head>
   <body>
-    <form>
+    <form action="" method="GET">
       <h1>Login</h1>
       <div>
         <label>username</label>
         <br>
-        <input type="text">
+        <input type="text" required placeholder="Enter your username" name="username">
       </div>
+      <br>
+      <div>
+        <label>email</label>
+        <br>
+        <input type="email" required placeholder="Enter your email" value="aiham@gmail.com" name="email">
+      </div>
+      <br>
       <div>
         <label>password</label>
         <br>
-        <input type="password">
+        <input type="password" required placeholder="Enter your password" name="password">
       </div>
       <br>
-      <input type="submit">
+      <input type="submit" value="Login">
     </from> 
   </body>
 </html>
