--- a/24-27/index.html
+++ b/24-27/index.html
@@ -9,6 +9,7 @@
   <body>
     <form action="" method="GET">
       <h1>Login</h1>
+      <input type="hidden" value="zx287fu876k6" name="code">
       <div>
         <label>username</label>
         <br>
@@ -27,7 +28,25 @@
         <input type="password" required placeholder="Enter your password" name="password">
       </div>
       <br>
+      <div>
+        <label>color : </label>
+        <input type="color">
+      </div>
+      <br>
+      <div>
+        <label>range </label>
+        <input type="range" min="10" max="100" step="10" value="30">
+      </div>
+      <br>
+      <div>
+        <label>number : </label>
+        <input type="number" min="10" max="100" step="10" value="30">
+      </div>
+      <br>
       <input type="submit" value="Login">
+      <br>
+      <br>
+      <input type="reset">
     </from> 
   </body>
 </html>
