video 28 & 29 form part 5 & 6

--- a/24-27/index.html
+++ b/24-27/index.html
@@ -13,19 +13,19 @@
       <div>
         <label>username</label>
         <br>
-        <input type="text" required placeholder="Enter your username" name="username">
+        <input type="text" required placeholder="Enter your username" value="aiham" readonly name="username">
       </div>
       <br>
       <div>
         <label>email</label>
         <br>
-        <input type="email" required placeholder="Enter your email" value="aiham@gmail.com" name="email">
+        <input type="email" required placeholder="Enter your email" value="aiham@gmail.com" name="email" disabled>
       </div>
       <br>
       <div>
         <label>password</label>
         <br>
-        <input type="password" required placeholder="Enter your password" name="password">
+        <input type="password" required placeholder="Enter your password" name="password" minlength="8" maxlength="20">
       </div>
       <br>
       <div>
