--- a/24-27/index.html
+++ b/24-27/index.html
@@ -43,6 +43,35 @@
         <input type="number" min="10" max="100" step="10" value="30">
       </div>
       <br>
+      <label>OS</label>
+      <div>
+        <input type="radio" name="os" value="windows" id="win" checked>
+        <label for="win">Windows</label>
+      </div>
+      <div>
+        <input type="radio" name="os" value="linux" id="lin">
+        <label for="lin">Linux</label>
+      </div>
+      <div>
+        <input type="radio" name="os" value="mac" id="mac">
+        <label for="mac">Mac</label>
+      </div>
+      <br>
+      <label>Skills</label>
+
+      <div>
+        <input type="checkbox" name="skills" value="html" id="html">
+        <label for="html">HTML</label>
+      <d/iv>
+      <div>
+        <input type="checkbox" name="skills" value="css" id="css">
+        <label for="css">CSS</label>
+      </div>
+      <div>
+        <input type="checkbox" name="skills" value="js" id="js">
+        <label for="js">JS</label>
+      </div>
+      <br>
       <input type="submit" value="Login">
       <br>
       <br>
