--- a/24-27/index.html
+++ b/24-27/index.html
@@ -72,6 +72,22 @@
         <label for="js">JS</label>
       </div>
       <br>
+      <label for="book">Choose Book</label>
+      <select name="book" id="book" multiple>
+        <optgroup label="Section 1">
+           <option value="b1">Book 1</option>
+           <option value="b2">Book 2</option>
+           <option value="b3">Book 3</option>
+        </optgroup>
+        <optgroup label="Section 2">
+           <option value="b4" selected>Book 4</option>
+           <option value="b5">Book 5</option>
+           <option value="b6">Book 6</option>
+        </optgroup>
+      </select>
+      <br>
+      <textarea name="desc" id="l" col="10" rows="20"></textarea>
+      <br>
       <input type="submit" value="Login">
       <br>
       <br>
