--- a/24-27/index.html
+++ b/24-27/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Description...">
   </head>
   <body>
-    <form action="" method="GET">
+    <form action="" method="GET" novalidate target="_blank">
       <h1>Login</h1>
       <input type="hidden" value="zx287fu876k6" name="code">
       <div>
@@ -86,12 +86,70 @@
         </optgroup>
       </select>
       <br>
+      <br>
       <textarea name="desc" id="l" col="10" rows="20"></textarea>
       <br>
+      <br>
+      <div>
+        <label for="file">Upload : </label>
+        <input type="file" name="file" id="file">
+      </div>
+      <br>
+      <div>
+        <label for="search">search</label>
+        <br>
+        <input type="search">
+      </div>
+      <br>
+      <div>
+        <label>URL</label>
+        <br>
+        <input type="url">
+      </div>
+      <br>
+      <div>
+        <label>Date :</label>
+        <input type="date">
+      </div>
+      <br>
+      <div>
+        <label>Month :</label>
+        <input type="month">
+      </div>
+      <br>
+      <div>
+        <label>Time :</label>
+        <input type="time">
+      </div>
+      <br>
+      <label>Choose :</label>
+      <input list="programming">
+      <br>
+      <datalist id="programming">
+        <option value="Python">
+        <option value="Java">
+        <option value="C++">
+        <option value="C#">
+      </datalist>
+      <br>
       <input type="submit" value="Login">
-      <br>
-      <br>
       <input type="reset">
-    </from> 
+    </from>
+    <br> 
+    <hr>
+    <q>This is wise word</q>
+    <blockquote>This is wise word</blockquote>
+    <button>button</button>
+    <p>gjfhghfifghbd'gggjfheheirjg|<wbr>jdhedjdbfkshdjdvebejrhrjrje</p>
+    <p><bdi>مرحبا</bdi> wellcom</p>
+    <hr>
+    <pre>
+      <code>
+        x = 7;
+        y = 3;
+        print("z = ",x+y);
+      </code> 
+    </pre>
+    <iframe src="https://elzero.org"></iframe>
   </body>
 </html>
