--- a/24-27/assignment3.htm
+++ b/24-27/assignment3.htm
@@ -37,5 +37,13 @@
       <input type="submit" value="save">
       <input type="reset" value="empty">
     </form>
+    <hr>
+    <pre>
+      Hello Line One
+      Hello Line Two
+      Hello Line Three
+      Hello Line Four
+    </pre>
+    <iframe src="https://elzero.org" width="100%" height=400"></iframe>
   </body>
 </html>
